1.33
- Added ability to ban encounter from global stats.
- Fixed issue where the same encounter as uploaded by two different users both appeared in global stats.

1.32
- Fixed combatant hash not being set in database.
- Trying new player stat DB query.

1.31
- Global stats page.
- Manually end encounter in game with '/e end.'

1.30
- All database transactions now happen through new handler to eliminate (hopefully) issues with database write locks.
- Added ability to toggle table columns.
- Added Hits, Heals, Kills, and Cooldowns columns to table view.

1.29
- Fixed issue with user manager writing to database.

1.28
- Web app now attempts to reconnect after connection lost.
- Split player data in to seperate database table.
- All recieved combatant data is stored and timestamped for the ability to review stats at any point of the encounter.
- Added graph view. (TODO add more options then just DPS).
- Fixes to timeline and log view, fixed icons, fixed buffs/debuffs, etc.
- Changed log viewer to display log message found in game.

1.27
- Tweaked user data active check, believe it was incorrect and causing encounters to end mid fight.
- Fixed issue that caused initial combatant stats to be dropped.

1.26
- Fixed bug with importing ACT triggers with trailing spaces.
- Fixed issue where past encounters showed zero for all stats.</li>
- Fixed issue where one combatant was missing from past encounters (needs testing).
- Add combatant table indexes.

1.25
- Fixed further issues with DPS calculation.
- Dungeon sub bosses are now split in to seperate encounters.
- Fixed bug with importing ACT triggers.

1.24
- Fixed issues with DPS calculation.
- Tweak history page for speed.
- Fix log parsing issue that I believe resulted from last ACT plugin update.

1.23
- Added GNB to tank group (so they'll appear with blue background).
- Tweaks to encounter detection, simply to use "you obtained tomestones" message to flag clear.