@@ -1,5 +1,0 @@
-#view-timeline
-  canvas
-    cursor: grab
-    &.action-over
-      cursor: pointer
