@@ -621,20 +621,7 @@ class ViewTimeline extends ViewGridBase
                 break;
             }
         }
-        // get icon image
-        var actionImageSrc = "/static/img/enemy.png";
-        if (!actionData && action.type == ACTION_TYPE_DEATH) {
-            actionImageSrc = "/static/img/death.png";
-        } else if (actionData && ["attack", "shot"].indexOf(actionData.name.toLowerCase()) != -1) {
-            actionImageSrc = "/static/img/attack.png";
-        } else if (!actionData && typeof(action.data.actionName) != "undefined" && ["attack", "shot"].indexOf(action.data.actionName.toLowerCase()) != -1) {
-            actionImageSrc = "/static/img/attack.png";
-        } else if (actionData && actionData.icon && (combatant || action.type != ACTION_TYPE_NORMAL)) {
-            actionImageSrc = ACTION_DATA_BASE_URL + actionData.icon;
-            if ([ACTION_TYPE_GAIN_STATUS_EFFECT, ACTION_TYPE_LOSE_STATUS_EFFECT].indexOf(action.type) != -1) {
-                actionImageSrc = STATUS_DATA_BASE_URL + actionData.icon;
-            }
-        }
+        var actionImageSrc = this.getActionIcon(action);
         return {
             "combatant"         : combatant,
             "data"              : actionData,
