@@ -13,7 +13,7 @@
         <p class="text-center">
             <img src="/static/img/home_gang.png" alt="The Gang" />
         </p>        
-        <p>
+        <p class="text-center">
             {{.AppName}} is a tool for sharing your Final Fantasy XIV log and parse data from
             <a href="https://advancedcombattracker.com/">Advanced Combat Tracker (ACT)</a> on the
             web in real time.
@@ -91,12 +91,12 @@
 
     <div class="home-section">
         <div class="home-section-name">Contact &amp; Donate</div>
-        <p>
+        <p class="text-center">
             You can contact me via email at
             <strong><a href="mailto:&#110;&#097;&#116;&#104;&#097;&#110;&#064;&#111;&#103;&#100;&#101;&#110;&#046;&#116;&#101;&#099;&#104;">&#110;&#097;&#116;&#104;&#097;&#110;&#064;&#111;&#103;&#100;&#101;&#110;&#046;&#116;&#101;&#099;&#104;</a></strong>
             or on Discord at <strong>Chompy#3436</strong>. Feel free to send feature request, suggestions, or bug reports my way!
         </p>
-        <p>
+        <p class="text-center">
             Additionally, If you like FFLiveParse consider making a donation to help with hosting costs and to fund further development!
         </p>
         <div class="text-center">
@@ -112,43 +112,35 @@
                 <input type="hidden" name="currency_code" value="USD">
                 <!-- Display the payment button. -->
                 <input type="image" name="submit"
-                src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif"
+                src="//www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif"
                 alt="Donate">
                 <img alt="" width="1" height="1"
-                src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" >
+                src="//www.paypalobjects.com/en_US/i/scr/pixel.gif" >
             </form>
         </div>
         <div class="spacer"></div>
     </div>
     <div class="home-section">
         <div class="home-section-name">Version Notes</div>
-        <h3>Version 1.33</h3> 
+        <h3>Version 1.34</h3> 
+        <p>
+            <strong>Bug Fixes</strong>
+            <ul>
+                <li>Fixed page count in past encounter list.</li>
+                <li>Fixed icons in timeline and cooldown list.</li>
+            </ul>
+        </p>
         <p>
             <strong>Enhancements</strong>
             <ul>
-                <li>Added ability to ban encounter from global stats.</li>
+                <li>Added scroll bar to timeline and graph views.</li>
             </ul>
         </p>
+        <h3>Version 1.33</h3> 
         <p>
             <strong>Bug Fixes</strong>
             <ul>
                 <li>Fixed issue where the same encounter as uploaded by two different users both appeared in global stats.</li>
-            </ul>
-        </p>
-
-        <h3>Version 1.32</h3> 
-        <p>
-            <strong>Bug Fixes</strong>
-            <ul>
-                <li>Fixed a bug that prevented data needed to collect global stats from being saved.</li>
-            </ul>
-        </p>
-        <h3>Version 1.31</h3> 
-        <p>
-            <strong>Enhancements</strong>
-            <ul>
-                <li><a href="/stats">Global player stats</a> page added.</li>
-                <li>You can now manually end encounters in game with '/e end.'</li>
             </ul>
         </p>
     </div>
